# lob-execution-sim

./: .gitignore  CLAUDE.md  FINDING.md  README.md  pyproject.toml  run.sh
notebooks/: 05_analysis.py  06_adverse_selection.py  07_ofi_fill.py  08_survival.py  09_optimal_placement.py  10_deep_angles.py  11_multi_ticker.py  12_extended_analysis.py  13_shap.py  14_cross_date.py  15_rolling_auc.py  experiment_runner.py  injection_demo.py
results/: experiment_AAPL_2019-08-30_L1.parquet  experiment_AAPL_2019-08-30_L2.parquet  experiment_AAPL_2019-10-30_L1.parquet  experiment_AAPL_2019-10-30_L2.parquet  experiment_AAPL_2019-12-30.parquet  experiment_AAPL_2019-12-30_L1.parquet  experiment_AAPL_2019-12-30_L2.parquet  experiment_INTC_2019-08-30_L1.parquet  experiment_INTC_2019-08-30_L2.parquet  experiment_INTC_2019-10-30_L1.parquet  experiment_INTC_2019-10-30_L2.parquet  experiment_INTC_2019-12-30_L1.parquet  experiment_INTC_2019-12-30_L2.parquet  experiment_MSFT_2019-08-30_L1.parquet  experiment_MSFT_2019-08-30_L2.parquet  experiment_MSFT_2019-10-30_L1.parquet  experiment_MSFT_2019-10-30_L2.parquet  experiment_MSFT_2019-12-30_L1.parquet  experiment_MSFT_2019-12-30_L2.parquet  experiment_all_L1.parquet  experiment_all_L2.parquet
src/lob_sim/: experiment.py  explore.py  injection.py  itch_parser.py  ofi.py  orderbook.py  replay.py
tests/: test_experiment.py  test_injection.py  test_itch_parser.py  test_ofi.py  test_orderbook.py
