[project]
name = "lob-execution"
version = "0.1.0"
description = "Queue-position-aware limit order book execution simulator using LOBSTER data"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "polars>=1.40.1",
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
    "lifelines>=0.29.0",
    "sortedcontainers>=2.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["src"]

[tool.uv]
package = true
